Adding Base <base href=/odin-recipes/>

--- a/Recipes/KidneyBeanCurry.html
+++ b/Recipes/KidneyBeanCurry.html
@@ -2,10 +2,11 @@
 <html lang="eng">
 <head>
     <meta charset="UTF-8" />
+    <base href="/odin-recipes/">
     <title>Rajma (Kidney Bean Curry)</title>
 </head>
 <body>
-    <h1>Flatbread</h1>
+    <h1>Kidney Bean Curry</h1>
           <img src="RajmaMasala.jpg" alt="Rajma (Kidney Bean Curry)" style="width:300px;height:200px;" >
     <h2>Description</h2>
     <h3>Rajma (Kidney Bean Curry)</h3>
