--- a/Recipes/YogurtDrink.html
+++ b/Recipes/YogurtDrink.html
@@ -2,11 +2,12 @@
 <html lang="eng">
 <head>
     <meta charset="UTF-8" />
+    <base href="/odin-recipes/">
     <title>Yogurt Drink</title>
 </head>
 <body>
     <h1>Yogurt Drink</h1>
-          <img src="MangoLassi.webp" alt="Mango Lassi (Indian Yogurt Drink)" style="width:300px;height:200px;" >
+          <img src="MangoLassi.webp" alt="Mango Lassi (Indian Yogurt Drink)" style="width:220px;height:300px;" >
     <h2>Description</h2>
     <h3>Mango Lassi (Indian Yogurt Drink)</h3>
         <p>A refreshing, creamy yogurt-based drink blended with ripe mangoes, sugar, and a hint of cardamom.</p>
