--- a/Recipes/flatbread.html
+++ b/Recipes/flatbread.html
@@ -2,6 +2,7 @@
 <html lang="eng">
 <head>
     <meta charset="UTF-8" />
+    <base href="/odin-recipes/">
     <title>Flatbread</title>
 </head>
 <body>
