--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="eng">
 <head>
     <meta charset="UTF-8" />
+    <base href="/odin-recipes/">
     <title>Odin Recipes</title>
 </head>
 <body>
