Removing base href from sublinks referring to index

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="/Recipes/flatbread.html">Flatbread</a></li>
-        <li><a href="/Recipes/KidneyBeanCurry.html">Kidney Bean Curry</a></li>
-        <li><a href="/Recipes/YogurtDrink.html">Yogurt Drink</a></li>
+        <li><a href="/odin-recipes/Recipes/YogurtDrink.html">Flatbread</a></li>
+        <li><a href="/odin-recipes/Recipes/KidneyBeanCurry.html">Kidney Bean Curry</a></li>
+        <li><a href="/odin-recipes/Recipes/YogurtDrink.html">Yogurt Drink</a></li>
     </ul>
 </body>
 </html>
