Updated recepie with css

--- a/Recipes/KidneyBeanCurry.html
+++ b/Recipes/KidneyBeanCurry.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Rajma (Kidney Bean Curry)</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Kidney Bean Curry</h1>
