--- a/Recipes/YogurtDrink.html
+++ b/Recipes/YogurtDrink.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Yogurt Drink</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Yogurt Drink</h1>
