--- a/Recipes/flatbread.html
+++ b/Recipes/flatbread.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Flatbread</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Flatbread</h1>
